Fix daily returns calculation

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
     </head>
     <body>
         <h1>Fundcalc</h1>
-        <p>Head over to <a href="/portfolio">portfolio</a> to see portfolio value over time.</p>
+        <ul>
+            <li><p>Daily pricing of <a href="/portfolio">portfolio</a></p></li>
+            <li><p>Daily portfolio <a href="/portfolio-returns">returns</a></p></li>
+        </ul>
     </body>
 </html>
