Move handlers out of main

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <body>
         <h1>Fundcalc</h1>
         <ul>
-            <li><p>Daily pricing of <a href="/portfolio">portfolio</a></p></li>
-            <li><p>Daily portfolio <a href="/portfolio-returns">returns</a></p></li>
+            <li><p>Daily pricing of <a href="/portfolio/prices">portfolio</a></p></li>
+            <li><p>Daily portfolio <a href="/portfolio/returns">returns</a></p></li>
         </ul>
     </body>
 </html>
